--- a/.github/workflows/lint-fmt-core.yml
+++ b/.github/workflows/lint-fmt-core.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -40,7 +40,10 @@ jobs:
       matrix:
         clippy:
           - { args: '', key: 'empty' }
-          - { args: '--features compression,wry,isolation,custom-protocol,api-all,cli,updater,system-tray', key: 'all' }
+          - {
+              args: '--features compression,wry,isolation,custom-protocol,api-all,cli,updater,system-tray',
+              key: 'all'
+            }
           - { args: '--no-default-features', key: 'no-default' }
           - { args: '--features custom-protocol', key: 'custom-protocol' }
           - { args: '--features api-all', key: 'api-all' }
@@ -67,38 +70,36 @@ jobs:
         if: matrix.platform == 'windows-latest'
         run: echo "CURRENT_DATE=$(Get-Date -Format "yyyy-MM-dd")" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-      - name: Cache cargo registry
-        uses: actions/cache@v2.1.4
+      - name: Cache cargo state
+        uses: actions/cache@v2
+        env:
+          cache-name: cargo-state
         with:
-          path: ~/.cargo/registry
-          # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-          # Restore from outdated cache for speed
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            ~/.cargo/bin
+          key: ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           restore-keys: |
-            ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-stable-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/.cargo/git
-          # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-          # Restore from outdated cache for speed
-          restore-keys: |
-            ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-stable-cargo-index-
+            ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-
+            ubuntu-latest-stable-${{ env.cache-name }}-
+            ubuntu-latest-stable-
+            ubuntu-latest-
 
       - name: Cache core cargo target
         uses: actions/cache@v2
+        env:
+          cache-name: cargo-core
         with:
           path: target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}
-            ubuntu-latest-stable-cargo-core-
+            ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('core/**/Cargo.toml') }}
+            ubuntu-latest-stable-${{ env.cache-name }}-
+            ubuntu-latest-stable-
+            ubuntu-latest-
 
       - uses: actions-rs/clippy-check@v1
         with:
