--- a/tooling/cli/templates/plugin/with-api/.github/workflows/test.yml
+++ b/tooling/cli/templates/plugin/with-api/.github/workflows/test.yml
@@ -44,35 +44,36 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: echo "CURRENT_DATE=$(Get-Date -Format "yyyy-MM-dd")" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-    - name: Cache cargo registry
+    - name: Cache cargo state
       uses: actions/cache@v2
+      env:
+        cache-name: cargo-state
       with:
-        path: ~/.cargo/registry
-        # Add date to the cache to keep it up to date
-        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-        # Restore from outdated cache for speed
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          ~/.cargo/bin
+        key: ${{ matrix.os }}-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
         restore-keys: |
-          ${{ matrix.os }}-${{ matrix.rust }}-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-
-    - name: Cache cargo index
-      uses: actions/cache@v2
-      with:
-        path: ~/.cargo/git
-        # Add date to the cache to keep it up to date
-        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-        # Restore from outdated cache for speed
-        restore-keys: |
-          ${{ matrix.os }}-${{ matrix.rust }}-cargo-index-${{ hashFiles('**/Cargo.toml') }}
+          ${{ matrix.os }}-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-
+          ${{ matrix.os }}-stable-${{ env.cache-name }}-
+          ${{ matrix.os }}-stable-
+          ${{ matrix.os }}-
 
     - name: Cache cargo target
       uses: actions/cache@v2
+      env:
+          cache-name: cargo-build
       with:
         path: ${{ matrix.project}}/target
         # Add date to the cache to keep it up to date
-        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-build-target-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+        key: ${{ matrix.os }}-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
         # Restore from outdated cache for speed
         restore-keys: |
-          ${{ matrix.os }}-${{ matrix.rust }}-cargo-build-target-${{ hashFiles('**/Cargo.toml') }}
+          ${{ matrix.os }}-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}
+          ${{ matrix.os }}-stable-${{ env.cache-name }}-
+          ${{ matrix.os }}-stable-
+          ${{ matrix.os }}-
 
     - name: Run tests 
       uses: actions-rs/cargo@v1
