--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -12,6 +12,11 @@ on:
       - 'tooling/bundler/**'
       - 'tooling/cli/**'
 
+env:
+  RUST_BACKTRACE: 1
+  CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
+  CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
+
 jobs:
   udeps:
     runs-on: ubuntu-latest
