--- a/.github/workflows/test-bundler.yml
+++ b/.github/workflows/test-bundler.yml
@@ -13,8 +13,11 @@ on:
     paths:
       - '.github/workflows/test-bundler.yml'
       - 'tooling/bundler/**'
+
 env:
   RUST_BACKTRACE: 1
+  CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
+  CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
 
 jobs:
   build-tauri-bundler:
