--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -16,6 +16,8 @@ on:
 
 env:
   RUST_BACKTRACE: 1
+  CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
+  CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
 
 jobs:
   test-tauri-cli:
