--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -5,6 +5,8 @@
 name: test create-tauri-app
 env:
   RUST_BACKTRACE: 1
+  CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
+  CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
   TAURI_RECIPE: 'vanillajs,cra,vite,ngcli,solid'
 
 on:
