--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -96,7 +96,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-udeps --locked
+          args: cargo-udeps --locked --force
 
       - name: Install required packages
         run: |
