--- a/.github/workflows/lint-fmt-cli.yml
+++ b/.github/workflows/lint-fmt-cli.yml
@@ -14,13 +14,18 @@ on:
       - '.github/workflows/lint-fmt-cli.yml'
       - 'tooling/cli/**'
 
+env:
+  RUST_BACKTRACE: 1
+  CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
+  CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
+
 jobs:
   fmt_check:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -49,38 +54,36 @@ jobs:
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
-      - name: Cache cargo registry
-        uses: actions/cache@v2.1.4
+      - name: Cache cargo state
+        uses: actions/cache@v2
+        env:
+          cache-name: cargo-state
         with:
-          path: ~/.cargo/registry
-          # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-          # Restore from outdated cache for speed
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            ~/.cargo/bin
+          key: ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           restore-keys: |
-            ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-stable-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/.cargo/git
-          # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
-          # Restore from outdated cache for speed
-          restore-keys: |
-            ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-stable-cargo-index-
+            ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-
+            ubuntu-latest-stable-${{ env.cache-name }}-
+            ubuntu-latest-stable-
+            ubuntu-latest-
 
       - name: Cache CLI cargo target
         uses: actions/cache@v2
+        env:
+          cache-name: cargo-cli
         with:
           path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
-            ubuntu-latest-stable-cargo-cli-
+            ubuntu-latest-stable-${{ env.cache-name }}-${{ hashFiles('tooling/cli/Cargo.lock') }}
+            ubuntu-latest-stable-${{ env.cache-name }}-
+            ubuntu-latest-stable-
+            ubuntu-latest-
 
       - uses: actions-rs/clippy-check@v1
         with:
