--- a/tooling/create-tauri-app/package.json
+++ b/tooling/create-tauri-app/package.json
@@ -28,8 +28,7 @@
     "lint-fix": "eslint --fix --ext ts \"./src/**/*.ts\"",
     "lint:lockfile": "lockfile-lint --path yarn.lock --type yarn --validate-https --allowed-hosts npm yarn",
     "format": "prettier --write --end-of-line=auto \"./**/*.{cjs,js,jsx,ts,tsx,html,css,json}\" --ignore-path .gitignore",
-    "format:check": "prettier --check --end-of-line=auto \"./**/*.{cjs,js,jsx,ts,tsx,html,css,json}\" --ignore-path .gitignore",
-    "test": "node ./test/spawn.test.mjs"
+    "format:check": "prettier --check --end-of-line=auto \"./**/*.{cjs,js,jsx,ts,tsx,html,css,json}\" --ignore-path .gitignore"
   },
   "dependencies": {
     "chalk": "4.1.2",
@@ -39,7 +38,6 @@
     "scaffe": "1.2.0"
   },
   "devDependencies": {
-    "@effection/process": "2.0.4",
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "8.3.0",
@@ -48,7 +46,6 @@
     "@types/semver": "7.3.9",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
-    "effection": "2.0.4",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard-with-typescript": "21.0.1",
@@ -59,7 +56,6 @@
     "eslint-plugin-security": "1.4.0",
     "prettier": "2.5.1",
     "rollup": "2.67.1",
-    "temp-dir": "2.0.0",
     "tslib": "2.3.1",
     "typescript": "4.5.5"
   }
