--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -42,6 +42,7 @@ build = [ "proc-macro2", "quote" ]
 compression = [ "zstd" ]
 schema = [ "schemars" ]
 isolation = [ "aes-gcm", "ring", "once_cell" ]
+__isolation-docs = [ "aes-gcm", "once_cell" ]
 process-relaunch-dangerous-allow-symlink-macos = [ ]
 config-json5 = [ "json5" ]
 resources = [ "glob", "walkdir" ]
