refactor(core): rename `command` feature to `process-command-api`

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -129,7 +129,7 @@ http-api = [ "attohttpc" ]
 shell-open-api = [ "open", "regex", "tauri-macros/shell-scope" ]
 fs-extract-api = [ "zip" ]
 reqwest-client = [ "reqwest", "bytes" ]
-command = [ "shared_child", "os_pipe", "memchr" ]
+process-command-api = [ "shared_child", "os_pipe", "memchr" ]
 dialog = [ "rfd" ]
 notification = [ "notify-rust" ]
 cli = [ "clap" ]
@@ -195,8 +195,8 @@ process-relaunch-dangerous-allow-symlink-macos = [ "tauri-utils/process-relaunch
 protocol-all = [ "protocol-asset" ]
 protocol-asset = [ ]
 shell-all = [ "shell-execute", "shell-sidecar", "shell-open" ]
-shell-execute = [ "command", "regex", "tauri-macros/shell-scope" ]
-shell-sidecar = [ "command", "regex", "tauri-macros/shell-scope" ]
+shell-execute = [ "process-command-api", "regex", "tauri-macros/shell-scope" ]
+shell-sidecar = [ "process-command-api", "regex", "tauri-macros/shell-scope" ]
 shell-open = [ "shell-open-api" ]
 window-all = [
   "window-create",
