refactor(core): window id

--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -18,6 +18,7 @@ tauri-runtime = { version = "0.3.2", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-rc.2", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
 infer = "0.4"
+rand = "0.8"
 
 [target."cfg(windows)".dependencies]
 ico = "0.1"
