--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -27,6 +27,12 @@ zstd = { version = "0.10", optional = true }
 regex = { version = "1", optional = true }
 uuid = { version = "0.8", features = [ "v4" ] }
 
+[target."cfg(windows)".dependencies]
+ico = "0.1"
+
+[target."cfg(not(windows))".dependencies]
+png = "0.16"
+
 [features]
 default = [ "compression" ]
 compression = [ "zstd", "tauri-utils/compression" ]
