fix(cli.js): change access for '@tauri-apps/cli-win32-ia32-msvc'

--- a/tooling/cli/node/npm/win32-ia32-msvc/package.json
+++ b/tooling/cli/node/npm/win32-ia32-msvc/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tauri-apps/cli-win32-ia32-msvc",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "os": [
     "win32"
   ],
