--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
   "core/tauri-codegen",
   
   # integration tests
-  "core/tauri/tests/restart"
+  "core/tests/restart"
 ]
 
 exclude = [
