add restart integration test to cargo workspace (#3675)
Co-authored-by: Lucas Nogueira <lucas@tauri.studio>

--- a/core/tests/restart/Cargo.toml
+++ b/core/tests/restart/Cargo.toml
@@ -1,4 +1,3 @@
-[workspace]
 [package]
 name = "restart"
 version = "0.1.0"
@@ -7,4 +6,7 @@ license = "Apache-2.0 OR MIT"
 edition = "2021"
 
 [dependencies.tauri]
-path = "../.."
+path = "../../tauri"
+
+[dev-dependencies]
+tempfile = "3"
