--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 thiserror = "1.0.30"
 phf = { version = "0.10", features = [ "macros" ] }
-zstd = { version = "0.11", optional = true }
+brotli = { version = "3", optional = true, default-features = false, features = ["std"] }
 url = { version = "2.2", features = [ "serde" ] }
 kuchiki = "0.8"
 html5ever = "0.25"
@@ -39,7 +39,7 @@ heck = "0.4"
 
 [features]
 build = [ "proc-macro2", "quote" ]
-compression = [ "zstd" ]
+compression = [ "brotli" ]
 schema = [ "schemars" ]
 isolation = [ "aes-gcm", "ring", "once_cell" ]
 __isolation-docs = [ "aes-gcm", "once_cell" ]
