Revert "fix: kill child processed on linux"
This reverts commit b6892711254ae5b3ab4f34e35a27b108438d8fdf.

--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -16,9 +16,9 @@ include = [
   "src/",
   "/templates",
   "MergeModules/",
-  "scripts/",
   "*.json",
   "*.rs",
+  "vswhere.exe",
   "tauri.gitignore"
 ]
 
