fix(cli.rs): terminate the beforeDevCommand, closes #2794 (#2883)

--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -62,6 +62,7 @@ dialoguer = "0.10"
 url = { version = "2.2", features = [ "serde" ] }
 os_pipe = "1"
 ignore = "0.4"
+ctrlc = "3.2"
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
