--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -32,10 +32,12 @@ gtk = { version = "0.15", features = [ "v3_20" ] }
 [features]
 dox = [ "wry/dox" ]
 devtools = [ "wry/devtools", "tauri-runtime/devtools" ]
-system-tray = [ "wry/tray", "tauri-runtime/system-tray" ]
+system-tray = [ "tauri-runtime/system-tray", "wry/tray" ]
 macos-private-api = [
   "wry/fullscreen",
   "wry/transparent",
   "tauri-runtime/macos-private-api"
 ]
 objc-exception = [ "wry/objc-exception" ]
+gtk-tray = [ "wry/gtk-tray" ]
+ayatana-tray = [ "wry/ayatana-tray" ]
