--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -28,6 +28,7 @@ features = [
   "__updater-docs",
   "system-tray",
   "devtools",
+  "http-multipart",
   "dox"
 ]
 rustdoc-args = [ "--cfg", "doc_cfg" ]
@@ -72,7 +73,7 @@ percent-encoding = "2.1"
 base64 = { version = "0.13", optional = true }
 clap = { version = "3", optional = true }
 notify-rust = { version = "4.5", optional = true }
-reqwest = { version = "0.11", features = [ "json", "multipart", "stream" ], optional = true }
+reqwest = { version = "0.11", features = [ "json", "stream" ], optional = true }
 bytes = { version = "1", features = [ "serde" ], optional = true }
 attohttpc = { version = "0.18", features = [ "json", "form" ], optional = true }
 open = { version = "2.0", optional = true }
@@ -135,6 +136,7 @@ updater = [
 ]
 __updater-docs = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
 http-api = [ "attohttpc" ]
+http-multipart = [ "attohttpc/multipart-form", "reqwest/multipart" ]
 shell-open-api = [ "open", "regex", "tauri-macros/shell-scope" ]
 fs-extract-api = [ "zip" ]
 reqwest-client = [ "reqwest", "bytes" ]
