--- a/.github/workflows/lint-fmt-core.yml
+++ b/.github/workflows/lint-fmt-core.yml
@@ -46,7 +46,7 @@ jobs:
         clippy:
           - { args: '', key: 'empty' }
           - {
-              args: '--features compression,wry,isolation,custom-protocol,api-all,cli,updater,system-tray',
+              args: '--features compression,wry,isolation,custom-protocol,api-all,cli,updater,system-tray,http-multipart',
               key: 'all'
             }
           - {
