feat: expose window cursor APIs, closes #3888 #3890

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -230,6 +230,10 @@ window-all = [
   "window-set-focus",
   "window-set-icon",
   "window-set-skip-taskbar",
+  "window-set-cursor-grab",
+  "window-set-cursor-visible",
+  "window-set-cursor-icon",
+  "window-set-cursor-position",
   "window-start-dragging",
   "window-print"
 ]
@@ -255,6 +259,10 @@ window-set-fullscreen = [ ]
 window-set-focus = [ ]
 window-set-icon = [ ]
 window-set-skip-taskbar = [ ]
+window-set-cursor-grab = [ ]
+window-set-cursor-visible = [ ]
+window-set-cursor-icon = [ ]
+window-set-cursor-position = [ ]
 window-start-dragging = [ ]
 window-print = [ ]
 config-json5 = [ "tauri-macros/config-json5" ]
