--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -21,6 +21,10 @@ env:
   CARGO_INCREMENTAL: 0 # This is set to 0 by the https://github.com/Swatinem/rust-cache
   CARGO_PROFILE_DEV_DEBUG: 0 # This would add unnecessary bloat to the target folder, decreasing cache efficiency.
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test-tauri-core:
     runs-on: ${{ matrix.platform }}
