fix(cli): prevent infinite loop in dev file watcher

--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -19,7 +19,8 @@ include = [
   "scripts/",
   "*.json",
   "*.rs",
-  "tauri.gitignore"
+  "tauri.gitignore",
+  "tauri-dev-watcher.gitignore"
 ]
 
 [[bin]]
